litmask/tests/compile/mask_serialize_union.stderr
error: MaskSerialize! grammar: supports structs and enums only
 --> tests/compile/mask_serialize_union.rs:8:7
  |
8 | union RawHandle {
  |       ^^^^^^^^^
